[gd_scene load_steps=7 format=3 uid="uid://dl3op31q4jvbo"]

[ext_resource type="Theme" uid="uid://buo11jw8ac2ew" path="res://ast/ui/UITheme.tres" id="1_22sri"]
[ext_resource type="Script" path="res://scn/play_menu.gd" id="2_hgo23"]

[sub_resource type="LabelSettings" id="LabelSettings_hgstc"]
font_size = 112

[sub_resource type="LabelSettings" id="LabelSettings_3pu2x"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dplr7"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ac6e"]
bg_color = Color(1, 1, 1, 1)

[node name="PLAY-MENU" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_22sri")
script = ExtResource("2_hgo23")

[node name="__" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="PanelContainer" parent="__"]
custom_minimum_size = Vector2(600, 330)
layout_mode = 2

[node name="margins" type="MarginContainer" parent="__/BG"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="__" type="VBoxContainer" parent="__/BG/margins"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Title" type="Label" parent="__/BG/margins/__"]
layout_mode = 2
text = "PSYOKO"
label_settings = SubResource("LabelSettings_hgstc")
horizontal_alignment = 1

[node name="__" type="VBoxContainer" parent="__/BG/margins/__"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameStack" type="HBoxContainer" parent="__/BG/margins/__/__"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="__/BG/margins/__/__/NameStack"]
layout_mode = 2
size_flags_horizontal = 0
text = "Name: "
label_settings = SubResource("LabelSettings_3pu2x")

[node name="NameLineEdit" type="LineEdit" parent="__/BG/margins/__/__/NameStack"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
alignment = 2
max_length = 21

[node name="ColorStack" type="HBoxContainer" parent="__/BG/margins/__/__"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="__/BG/margins/__/__/ColorStack"]
layout_mode = 2
size_flags_horizontal = 0
text = "Color:"
label_settings = SubResource("LabelSettings_3pu2x")

[node name="ColorPickerButton" type="ColorPickerButton" parent="__/BG/margins/__/__/ColorStack"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_dplr7")
color = Color(1, 1, 1, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="__/BG/margins/__"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="SettingsButton" type="Button" parent="__/BG/margins/__/HBoxContainer"]
self_modulate = Color(0.98, 0.98, 0.98, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/align_to_largest_stylebox = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_7ac6e")
text = "Settings"

[node name="PlayButton" type="Button" parent="__/BG/margins/__/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/align_to_largest_stylebox = 1
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_7ac6e")
text = " Play "

[node name="ChangeServerButton" type="Button" parent="__/BG/margins/__/HBoxContainer"]
self_modulate = Color(0.98, 0.98, 0.98, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/align_to_largest_stylebox = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_7ac6e")
text = "Change Server"
